feat: navbar with searchbar and login and signup popup modal

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -11,6 +11,7 @@
     --popover: 0 0% 100%;
     --popover-foreground: 222.2 84% 4.9%;
     --primary: 222.2 47.4% 11.2%;
+    --primary-color: rgb(230, 113, 17);
     --primary-foreground: 210 40% 98%;
     --secondary: 210 40% 96.1%;
     --secondary-foreground: 222.2 47.4% 11.2%;
@@ -66,6 +67,16 @@
   body {
     @apply bg-background text-foreground;
   }
+}
+
+.primary-button {
+  background-color: var(--primary-color);
+  color: white;
+  outline: none;
+}
+
+.border-color {
+  border-color: var(--primary);
 }
 
 .blur-background {
