--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -84,3 +84,7 @@
   transition: filter 0.3s ease;
   /* background-color: rgb(0, 0, 0); */
 }
+
+.light-shadow {
+  box-shadow:  0 0 1px rgba(0, 0, 0, 0.1);
+}
