--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -100,4 +100,17 @@
   box-shadow:  0 0 1px rgba(0, 0, 0, 0.1);
 }
 
+#nprogress .bar {
+  background: rgb(32, 132, 255) !important;  /* Force red color */
+  height: 4px !important;      /* Ensure the height is applied */
+  position: fixed !important;
+  top: 0 !important;
+  left: 0 !important;
+  width: 100% !important;
+  z-index: 1031 !important;
+}
+
+#nprogress .spinner {
+  display: none !important;
+}
 
